--- a/code.html
+++ b/code.html
@@ -636,9 +636,9 @@
         font-size: 15px; 
         font-family: Raleway; 
         font-weight: 400; 
-        word-wrap: break-word">поиск<br/></div></div>
+        word-wrap: break-word">поиск<br/></div>
     
-    <iframe src="https://yandex.ru/map-widget/v1/?ll=56.221098%2C58.002892&mode=search&oid=1064300558&ol=biz&z=17.09" width="205" height="147" frameborder="1" allowfullscreen="true" style="position:relative; left:1015px; top:1370px;"></iframe>
+    <iframe src="https://yandex.ru/map-widget/v1/?ll=56.221098%2C58.002892&mode=search&oid=1064300558&ol=biz&z=17.09" width="205" height="147" frameborder="1" allowfullscreen="true" style="position:relative; left:1015px; top:1370px;"></iframe></div>
     
   
 
